--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Add the internet permission here -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,7 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ESATestApp3"
         tools:targetApi="31">
-
+        <activity
+            android:name=".landingPage"
+            android:exported="false"
+            android:label="@string/title_activity_landing_page"
+            android:theme="@style/Theme.ESATestApp3" />
         <activity
             android:name=".ui.RegisterActivity"
             android:exported="false" />
@@ -28,6 +31,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
