--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.ESATestApp3"
         tools:targetApi="31">
         <activity
+            android:name=".addingBatteryPAge"
+            android:exported="false" />
+        <activity
+            android:name=".profilePage"
+            android:exported="false" />
+        <activity
             android:name=".landingPage"
             android:exported="false"
             android:label="@string/title_activity_landing_page"
